--- a/projects/ngx-ramblers/src/app/pages/admin/expenses/expenses.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/expenses/expenses.component.html
@@ -24,9 +24,8 @@
           <h5>Expenses</h5>
         </div>
         <div class="col-sm-9">
-          <app-markdown-editor category="admin" name="expenses-detailed-help"
-                               description="Expenses help">
-          </app-markdown-editor>
+          <app-markdown-editor standalone category="admin" name="expenses-detailed-help"
+                               description="Expenses help"/>
         </div>
       </div>
     </div>
