--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
@@ -355,7 +355,7 @@
                 <a target="_blank" [href]="systemConfig.national.walksManager.href">Ramblers Walks and Events Manager</a>
             </div>
             <div class="col-sm-12 mt-2 mb-2">
-              <app-markdown-editor category="admin" name="walks-manager-fields-help"
+              <app-markdown-editor standalone category="admin" name="walks-manager-fields-help"
                                    description="Walks Manager fields help"/>
             </div>
           </div>
