--- a/projects/ngx-ramblers/src/app/pages/committee/year/committee-year.html
+++ b/projects/ngx-ramblers/src/app/pages/committee/year/committee-year.html
@@ -1,5 +1,5 @@
-<app-markdown-editor category="committee" [name]="'introduction'"
-                     description="Introduction"></app-markdown-editor>
+<app-markdown-editor standalone category="committee" [name]="'introduction'"
+                     description="Introduction"/>
 <div class="card mb-3">
   <div class="wrapper w-100 position-relative">
     @if (committeeYear) {
