--- a/projects/ngx-ramblers/src/app/pages/how-to/subject-listing/subject-listing.html
+++ b/projects/ngx-ramblers/src/app/pages/how-to/subject-listing/subject-listing.html
@@ -1,7 +1,7 @@
 <app-page [pageTitle]="resourceSubject.description">
   <h2>How-to articles – {{resourceSubject.description}}</h2>
-  <app-markdown-editor class="body-text" category="how-to" [name]="'introduction'"
-  description="Introduction"></app-markdown-editor>
+  <app-markdown-editor standalone class="body-text" category="how-to" [name]="'introduction'"
+  description="Introduction"/>
   <div class="card mb-3">
     <div class="card-body">
       <div class="d-flex gap-2">
