--- a/projects/ngx-ramblers/src/app/pages/social/information/social-information.component.html
+++ b/projects/ngx-ramblers/src/app/pages/social/information/social-information.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-6">
-    <app-markdown-editor name="socialEventsInformation"
-                         description="social events information"></app-markdown-editor>
+    <app-markdown-editor standalone name="socialEventsInformation"
+                         description="social events information"/>
     @if (display.allow.contentEdits) {
         <a href="/admin/carousel-editor/imagesSocialEvents" title="Edit images"
            class="btn btn-primary ms-auto rounded">Edit images</a>
