--- a/projects/ngx-ramblers/src/app/pages/social/social-carousel/social-carousel.html
+++ b/projects/ngx-ramblers/src/app/pages/social/social-carousel/social-carousel.html
@@ -13,7 +13,7 @@
       <div class="row position-md-absolute w-100 h-100 align-items-center">
         <div class="ms-md-4 ms-lg-6 col-md-6 col-xl-6">
           <h1 class="display-3 font-weight-bold colour-cloudy">Social Events</h1>
-          <app-markdown-editor class="body-text colour-cloudy" category="social" name="introduction"
+          <app-markdown-editor standalone class="body-text colour-cloudy" category="social" name="introduction"
                                description="Introduction"/>
           <div class="body-text mt-5 w-auto">{{ contentMetadataItem?.text }}</div>
         </div>
