--- a/projects/ngx-ramblers/src/app/pages/walks/walk-risk-assessment/section/walk-risk-assessment-section.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-risk-assessment/section/walk-risk-assessment-section.component.html
@@ -4,8 +4,8 @@
       <div class="thumbnail-heading">{{riskAssessmentSection}}</div>
       <div class="row">
         <div class="col-sm-12">
-          <app-markdown-editor [category]="'risk-assessments'" [name]="'risk-assessments-' +riskAssessmentKey"
-                               [description]="riskAssessmentSection"></app-markdown-editor>
+          <app-markdown-editor standalone [category]="'risk-assessments'" [name]="'risk-assessments-' +riskAssessmentKey"
+                               [description]="riskAssessmentSection"/>
         </div>
       </div>
       <div class="row">
