--- a/projects/ngx-ramblers/src/app/pages/home/privacy-policy.component.html
+++ b/projects/ngx-ramblers/src/app/pages/home/privacy-policy.component.html
@@ -1,5 +1,4 @@
 <app-page>
-  <app-markdown-editor category="home" name="privacy-policy"
-                       description="Privacy policy help">
-  </app-markdown-editor>
+  <app-markdown-editor standalone category="home" name="privacy-policy"
+                       description="Privacy policy help"/>
 </app-page>
