--- a/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
@@ -224,6 +224,8 @@ ng-select.filename-select .ng-dropdown-panel
   --os-explorer-color: rgb(68 61 144)
   --ramblers-colour-sunrise: #{$ramblers-colour-sunrise}
   --ramblers-colour-mintcake: #{$ramblers-colour-mintcake}
+  --ramblers-colour-mintcake-hover: #{$ramblers-colour-mintcake-hover}
+  --ramblers-colour-mintcake-hover-dark: #{$ramblers-colour-mintcake-hover-dark}
   --disabled-color: #{$disabled-color}
 
 .os-explorer-pin
