--- a/projects/ngx-ramblers/src/app/pages/admin/profile/change-password.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/profile/change-password.component.html
@@ -23,20 +23,25 @@
             <form class="col col-sm-12">
               <form class="form-group">
                 <label for="prof-new-password">New Password</label>
-                <input [(ngModel)]="enteredMemberCredentials.newPassword" type="password"
-                       autocomplete="off"
-                       name="new-password"
-                       class="form-control input-sm" id="prof-new-password" placeholder="Enter new password">
+                <app-secret-input
+                  [(ngModel)]="enteredMemberCredentials.newPassword"
+                  id="prof-new-password"
+                  name="new-password"
+                  size="sm"
+                  placeholder="Enter new password">
+                </app-secret-input>
               </form>
             </form>
             <div class="col col-sm-12">
               <form class="form-group">
                 <label for="prof-new-password-confirm">Confirm New Password</label>
-                <input [(ngModel)]="enteredMemberCredentials.newPasswordConfirm" type="password"
-                       autocomplete="off"
-                       name="newPassword"
-                       class="form-control input-sm" id="prof-new-password-confirm"
-                       placeholder="Confirm new password">
+                <app-secret-input
+                  [(ngModel)]="enteredMemberCredentials.newPasswordConfirm"
+                  id="prof-new-password-confirm"
+                  name="newPassword"
+                  size="sm"
+                  placeholder="Confirm new password">
+                </app-secret-input>
               </form>
             </div>
             <div class="col col-sm-12 d-flex gap-2 flex-wrap">
