--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.sass
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.sass
@@ -3,3 +3,8 @@
 
 app-member-admin-modal
   min-width: 1900px !important
+
+.audit-table-container
+  max-height: 50vh
+  overflow-y: auto
+  overflow-x: hidden
