--- a/projects/ngx-ramblers/src/app/pages/walks/walk-edit/walk-edit.component.sass
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-edit/walk-edit.component.sass
@@ -32,3 +32,64 @@
     font-size: 0.8rem
     padding: 0.4rem 0.6rem
     white-space: nowrap
+
+.locate-button-addon
+  padding: 0
+  background-color: transparent
+  border: none
+
+.locate-button
+  border-radius: 0 .375rem .375rem 0
+  font-size: inherit
+  height: 100%
+  padding: 0 1.5rem
+  border: none
+
+.locate-button-addon
+  border-radius: 0 .375rem .375rem 0
+  overflow: hidden
+
+.locate-input
+  border-right: none
+  border-top-right-radius: 0
+  border-bottom-right-radius: 0
+
+.postcode-select
+  flex: 1 1 auto
+  min-width: 0
+  ::ng-deep.ng-select
+    background-color: transparent !important
+  ::ng-deep .ng-select-container
+    border-top-right-radius: 0
+    border-bottom-right-radius: 0
+    border-right: none
+    font-size: 1.125rem !important
+  ::ng-deep .ng-select-container:focus,
+  ::ng-deep .ng-select-container.ng-has-value
+    border-color: #ced4da !important
+    box-shadow: none !important
+  ::ng-deep .ng-select.ng-select-focused:not(.ng-select-opened) .ng-select-container
+    border-color: #86b7fe !important
+    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25) !important
+  ::ng-deep .ng-select.ng-select-opened .ng-select-container
+    border-color: #86b7fe !important
+    box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25) !important
+
+.postcode-option,
+.postcode-option.ng-option
+  display: flex
+  align-items: center
+  width: 100%
+
+.postcode-value
+  flex: 1 1 auto
+  margin-right: 0.75rem
+
+.postcode-distance
+  font-size: 0.85rem
+  color: #6c757d
+  margin-left: auto
+  text-align: right
+  &.copy-exclude
+    user-select: none
+    pointer-events: none
