--- a/projects/ngx-ramblers/src/app/carousel/view/carousel.sass
+++ b/projects/ngx-ramblers/src/app/carousel/view/carousel.sass
@@ -69,3 +69,18 @@
   align-items: center
   justify-content: center
   overflow: hidden
+
+.youtube-embed-container
+  position: relative
+  width: 100%
+  padding-bottom: 56.25%
+  height: 0
+  overflow: hidden
+
+  iframe
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    border: 0
