--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.sass
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.sass
@@ -48,3 +48,22 @@
   border-radius: 6px
   min-height: 60px
   background-color: rgba(0,0,0,0.02)
+
+.youtube-embed-container
+  position: relative
+  width: 100%
+  padding-bottom: 56.25%
+  height: 0
+  overflow: hidden
+  margin-bottom: 1rem
+
+  iframe
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    border: 0
+
+.youtube-embed-preview iframe
+  pointer-events: none
