fix(eslint): prohibit typeof checks in favor of es-toolkit type guards (ref: #103)
- Add ESLint rules to catch typeof comparisons and enforce use of isString(), isNumber(), isObject(), isUndefined(), isBoolean() from es-toolkit/compat
- Fix existing typeof violations across frontend and server codebase
- Refactor eslint.config.ts to eliminate rule duplication

--- a/projects/ngx-ramblers/src/app/album/view/album-grid.sass
+++ b/projects/ngx-ramblers/src/app/album/view/album-grid.sass
@@ -5,6 +5,13 @@
   height: 0
   overflow: hidden
 
+  app-youtube-embed
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+
   iframe
     position: absolute
     top: 0
