--- a/projects/ngx-ramblers/src/app/carousel/view/carousel.sass
+++ b/projects/ngx-ramblers/src/app/carousel/view/carousel.sass
@@ -73,9 +73,14 @@
 .youtube-embed-container
   position: relative
   width: 100%
-  padding-bottom: 56.25%
-  height: 0
   overflow: hidden
+
+  app-youtube-embed
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
 
   iframe
     position: absolute
